No GA on preview, slight fix for gallery images and aligned images

--- a/pogona/static/css/pogona.css
+++ b/pogona/static/css/pogona.css
@@ -22,6 +22,7 @@ img {
 
 .img-wrapper.mid {
     width: 66%;
+    min-width: 290px;
     margin-left:auto;
     margin-right:auto;
 }
@@ -30,6 +31,13 @@ img {
     width: 45%;
     margin-right: 5%;
     float: left;
+}
+
+.img-wrapper.gallery{
+    width: 45%;
+    margin-right: 5%;
+    float: left;
+    min-width:290px;
 }
 
 .img-wrapper.right{
